[package]
name = "sleepus-interruptus"
version = "0.1.0"
authors = ["Maxim Schepelin <m.schepelin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
pin-project-lite = "0.1.4"
